--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>This is a test title</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="import" href="navbar.html"/>
 </head>
 <body>
 <div class="navbar">
@@ -14,7 +15,7 @@
     <h1>Hello there</h1>
     <p><a href="#">Page 1</a> </p>
     <h2>Omegalul</h2>
-    <h3>Breiting er gud</h3>
+    <h3>Pepega</h3>
     <label>
         <textarea>Hello there</textarea>
     </label>
