--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2>Omegalul</h2>
     <h3>Pepega</h3>
     <label>
-        <textarea>Hello there</textarea>
+        <textarea>Hello there!</textarea>
     </label>
 </div>
 <script src="app/app.js">  </script>
