--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<script src="app/Login.js"></script>
 <h3>Login form</h3>
 <form id="login-form">
     <input id="user" type="username" placeholder="Enter username here" value=""/>
