--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>This is a test title</title>
+    <title>Roskilde SUP Klub</title>
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="import" href="navbar.html"/>
 </head>
 <body>
+<img src="img/logo%20cmyk%20roskilde%20sup%20klub.png">
 <div class="navbar">
     <a class="active" href="index.html"> Home </a>
     <a href="login.html"> Login</a>
