--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<img src="img/logo%20cmyk%20roskilde%20sup%20klub.png">
+<img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img">
 <div class="navbar">
     <a class="active" href="index.html"> Home </a>
     <a href="login.html"> Login</a>
