--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img">
+<img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img" style="width:5%;height:5%;float:left">
 <div class="navbar">
-    <a class="active" href="index.html"> Home </a>
+    <a href="index.html"> Hjem</a>
     <a href="login.html"> Login</a>
+    <a href="login.html"> Om os</a>
+    <a href="login.html"> Test</a>
 </div>
 <div align="center">
     <h1>Hello there</h1>
