--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
 </head>
 <body>
 <img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img" style="width:5%;height:5%;float:left">
-<div class="navbar">
-    <a href="index.html"> Hjem</a>
-    <a href="login.html"> Login</a>
-    <a href="login.html"> Om os</a>
-    <a href="login.html"> Test</a>
-</div>
+<ul class="navbar">
+    <li class="navbar-li">
+        <a class="nav-item" href="index.html">Hjem</a>
+    </li>
+    <li class="navbar-li">
+        <a class="nav-item" href="login.html">Login</a>
+    </li>
+    <li class="navbar-li">
+        <a class="nav-item" href="#">Test</a>
+    </li>
+
+</ul>
 <div align="center">
     <h1>Hello there</h1>
     <p><a href="#">Page 1</a> </p>
