--- a/kontakt.html
+++ b/kontakt.html
@@ -2,15 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Roskilde SUP Klub</title>
+    <title>Title</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-
 <a href="index.html">
-<img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img"  style="width:10%;height:10%;float:left">
-    </a>
-
+    <img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img"  style="width:10%;height:10%;float:left">
+</a>
 <div class="navbar">
     <a href="login.html"> Login</a>
     <a href="omos.html"> Om os</a>
@@ -21,7 +19,7 @@
 <br>
 <br>
 <div align="center">
-    <h1>Roskilde SUP Klub</h1>
+    <h1>Kontakt</h1>
     <p><a href="#">Page 1</a> </p>
     <h2>Omegalul</h2>
     <h3>Pepega</h3>
