--- a/login.html
+++ b/login.html
@@ -2,10 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Roskilde SUP Klub</title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+
+
+<a href="index.html">
+    <img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img"  style="width:10%;height:10%;float:left">
+</a>
+
+<div class="navbar">
+    <a href="login.html"> Login</a>
+    <a href="omos.html"> Om os</a>
+    <a href="arrangementer.html"> Arrangementer</a>
+    <a href="kontakt.html"> Kontakt os</a>
+</div>
+<script src="app/app.js">  </script>
+
 <script src="app/Login.js"></script>
+
+<br>
+<br>
+<br>
+
 <h3>Login form</h3>
 <form id="login-form">
     <input id="user" type="username" placeholder="Enter username here" value=""/>
