--- a/kontakt.html
+++ b/kontakt.html
@@ -11,7 +11,7 @@
 </a>
 <div class="navbar">
     <a href="login.html"> Login</a>
-    <a href="omos.html"> Om huhuhuos</a>
+    <a href="omos.html"> Om huhuuos</a>
     <a href="arrangementer.html"> Arrangementer</a>
     <a href="kontakt.html"> Kontakt os</a>
 </div>
