--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+<div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v4.0"></script>
 <img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img" style="width:5%;height:5%;float:left">
 <ul class="navbar">
     <li class="navbar-li">
@@ -19,7 +21,12 @@
     </li>
 
 </ul>
-<div align="center">
+<div class="fb-page" data-href="https://www.facebook.com/Roskildesupklub" data-tabs="timeline" data-width="250" data-height="100%" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+    <blockquote cite="https://www.facebook.com/Roskildesupklub" class="fb-xfbml-parse-ignore">
+        <a href="https://www.facebook.com/Roskildesupklub">ROSKILDE SUP KLUB</a>
+    </blockquote>
+</div>
+
     <h1>Hello there</h1>
     <p><a href="#">Page 1</a> </p>
     <h2>Omegalul</h2>
