--- a/arrangementer.html
+++ b/arrangementer.html
@@ -6,15 +6,24 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<a href="index.html">
-    <img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img"  style="width:10%;height:10%;float:left">
-</a>
-<div class="navbar">
-    <a href="login.html"> Login</a>
-    <a href="omos.html"> Om os</a>
-    <a href="arrangementer.html"> Arrangementer</a>
-    <a href="kontakt.html"> Kontakt os</a>
-</div>
+<img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img" style="width:5%;height:5%;float:left">
+<ul class="navbar">
+    <li class="navbar-li">
+        <a class="nav-item" href="index.html">Hjem</a>
+    </li>
+    <li class="navbar-li">
+        <a class="nav-item" href="omos.html">Om Os</a>
+    </li>
+    <li class="navbar-li">
+        <a class="nav-item" href="arrangementer.html">Arrangementer</a>
+    </li>
+    <li class="navbar-li">
+        <a class="nav-item" href="login.html">Login</a>
+    </li>
+    <li class="navbar-li">
+        <a class="nav-item" href="kontakt.html">Kontakt Os</a>
+    </li>
+</ul>
 
 <br>
 <br>
