--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a class="nav-item" href="arrangementer.html">Arrangementer</a>
     </li>
     <li class="navbar-li">
-        <a class="nav-item" href="Login.html">Login</a>
+        <a class="nav-item" href="login.html">Login</a>
     </li>
     <li class="navbar-li">
         <a class="nav-item" href="kontakt.html">Kontakt Os</a>
@@ -32,7 +32,7 @@
     </blockquote>
 </div>
 <div align="center">
-    <h1>Roskilde SUP Klub</h1>
+    <h1>Hello there</h1>
     <p><a href="#">Page 1</a> </p>
     <h2>Omegalul</h2>
     <h3>Pepega</h3>
