--- a/index.html
+++ b/index.html
@@ -8,7 +8,13 @@
 <body>
 <div id="fb-root"></div>
 <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_GB/sdk.js#xfbml=1&version=v4.0"></script>
-<img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img" style="width:10%;height:10%;float:left">
+
+
+<a href="index.html">
+    <img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img" style="width:10%;height:10%;float:left">
+</a>
+
+
 <ul class="navbar">
     <li class="navbar-li">
         <a class="nav-item" href="index.html">Hjem</a>
