--- a/kontakt.html
+++ b/kontakt.html
@@ -6,7 +6,9 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img" style="width:10%;height:10%;float:left">
+<a href="index.html">
+    <img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img" style="width:10%;height:10%;float:left">
+</a>
 <ul class="navbar">
     <li class="navbar-li">
         <a class="nav-item" href="index.html">Hjem</a>
