--- a/login.html
+++ b/login.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 
-
+<a href="index.html">
 <img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img" style="width:10%;height:10%;float:left">
-
+</a>
 <ul class="navbar">
     <li class="navbar-li">
         <a class="nav-item" href="index.html">Hjem</a>
