--- a/index.html
+++ b/index.html
@@ -38,8 +38,7 @@
     </blockquote>
 </div>
 <div class="center-text">
-    <h1>Roskilde SUP Klub</h1>
-    <p><a href="#">Page 1</a> </p>
+    <h1 class="h1">Roskilde SUP Klub</h1>
     <h2>Omegalul</h2>
     <h3>Pepega</h3>
     <img src="img/forsideBillede1.png" class="forsideBillede1" alt="forsideBillede1">
