--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 <body>
 
 <a href="index.html">
-<img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img" style="width:10%;height:10%;float:left">
+<img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img" class="logoBillede">
 </a>
 <ul class="navbar">
     <li class="navbar-li">
