--- a/omos.html
+++ b/omos.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <a href="index.html">
-    <img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img" style="width:10%;height:10%;float:left">
+    <img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img" class="logoBillede">
 </a>
 <ul class="navbar">
     <li class="navbar-li">
