--- a/arrangementer.html
+++ b/arrangementer.html
@@ -29,12 +29,12 @@
 
 <br>
 <br>
-<div align="center">
+<div class="center-text">
     <h1>Arrangementer</h1>
-    <h2>Omegalul</h2>
-    <h3>Pepega</h3>
+    <h2>Test titel 1</h2>
+    <p>TekstTekstTekstTekstTekstTekstTekstTekst</p>
     <label>
-        <textarea>Hello there!!!!!!!!</textarea>
+        <textarea>Fancy test titel 1</textarea>
     </label>
 </div>
 <script src="app/app.js">  </script>
