--- a/kontakt.html
+++ b/kontakt.html
@@ -28,12 +28,12 @@
 </ul>
 <br>
 <br>
-<div align="center">
+<div class="center-text">
     <h1>Kontakt</h1>
-    <h2>Omegalul</h2>
-    <h3>Pepega</h3>
+    <h2>Test titel 1</h2>
+    <p>TekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekst</p>
     <label>
-        <textarea>Hello there!!!!!!!!</textarea>
+        <textarea>Fancy test titel 1</textarea>
     </label>
 </div>
 <script src="app/app.js">  </script>
