--- a/arrangementer.html
+++ b/arrangementer.html
@@ -32,7 +32,7 @@
 <div class="center-text">
     <h1>Arrangementer</h1>
     <h2>Test titel 1</h2>
-    <p>TekstTekstTekstTekstTekstTekstTekstTekst</p>
+    <p class ="p">TekstTekstTekstTekstTekstTekstTekstTekst</p>
     <label>
         <textarea>Fancy test titel 1</textarea>
     </label>
