--- a/kontakt.html
+++ b/kontakt.html
@@ -31,9 +31,8 @@
 <div class="center-text">
     <h1>Kontakt</h1>
     <h2>Test titel 1</h2>
-    <p>TekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekstTekst</p>
-    <label>
-        <textarea>Fancy test titel 1</textarea>
+    <p class =p"> TekstTekstTekstTekstTekstTeks tTekstTekstTekstTekstTekstTekstTe kstTekstTekstTekstTe kstTekstTekstTekst TekstTekstTekstTekstTekstTeks tTek stTekstTekstTekstTekstTekstTekstTekstTekst TekstTekstTekstTekstTekstTekst
+         <textarea>Fancy test titel 1</textarea>
     </label>
 </div>
 <script src="app/app.js">  </script>
