--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </blockquote>
 </div>
 <div class="center-text">
-    <h1 class="h1">Roskilde SUP Klub</h1>
+    <h1>Roskilde SUP Klub</h1>
     <h2>Test titel 1</h2>
     <img src="img/forsideBillede1.png" class="forsideBillede1" alt="forsideBillede1">
     <p class="p"> Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus </p>
@@ -48,7 +48,16 @@
 </div>
     <script src="app/app.js">  </script>
 <footer>
-    <p>asd</p>
+    <div class="footer-del">
+        <h4>Roskilde SUP Klub</h4>
+        <p>Pellentesque habitant morbi tristique sen</p>
+        <p>asd</p>
+        <p>asd</p>
+    </div>
+    <div class="footer-del">
+        <h4>Sociale Medier</h4>
+        <a href="Facebook">Facebook</a>
+    </div>
 
 </footer>
 </body>
