--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a class="nav-item" href="kontakt.html">Kontakt Os</a>
     </li>
 </ul>
-<div class="fb-page" data-href="https://www.facebook.com/Roskildesupklub" data-tabs="timeline" data-width="250" data-height="100%" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+<div class="fb-page" data-href="https://www.facebook.com/Roskildesupklub" data-tabs="timeline" data-width="214" data-height="100%" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
     <blockquote cite="https://www.facebook.com/Roskildesupklub" class="fb-xfbml-parse-ignore">
         <a href="https://www.facebook.com/Roskildesupklub">ROSKILDE SUP KLUB</a>
     </blockquote>
@@ -47,18 +47,18 @@
 
 </div>
     <script src="app/app.js">  </script>
-<footer>
-    <div class="footer-del">
+<div class="footer">
+    <div class="footer-element">
         <h4>Roskilde SUP Klub</h4>
-        <p>Pellentesque habitant morbi tristique sen</p>
-        <p>asd</p>
-        <p>asd</p>
+        <p>Facebook</p>
+        <p>Facebook</p>
+        <p>Facebook</p>
     </div>
-    <div class="footer-del">
+    <div class="footer-element">
         <h4>Sociale Medier</h4>
-        <a href="Facebook">Facebook</a>
+        <p>Facebook</p>
     </div>
 
-</footer>
+</div>
 </body>
 </html>
