--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <a class="nav-item" href="kontakt.html">Kontakt Os</a>
     </li>
 </ul>
-<div class="fb-page" data-href="https://www.facebook.com/Roskildesupklub" data-tabs="timeline" data-width="235" data-height="746" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+<div class="fb-page" data-href="https://www.facebook.com/Roskildesupklub" data-tabs="timeline" data-width="235" data-height="100%" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
     <blockquote cite="https://www.facebook.com/Roskildesupklub" class="fb-xfbml-parse-ignore">
         <a href="https://www.facebook.com/Roskildesupklub">ROSKILDE SUP KLUB</a>
     </blockquote>
@@ -48,15 +48,14 @@
 </div>
     <script src="app/app.js">  </script>
 <div class="footer">
-    <div class="footer-element">
+    <div class="footer-element1">
         <h4>Roskilde SUP Klub</h4>
         <p>Facebook</p>
         <p>Facebook</p>
-        <p>Facebook</p>
     </div>
-    <div class="footer-element">
+    <div class="footer-element2">
         <h4>Sociale Medier</h4>
-        <p>Facebook</p>
+        <p><a href="https://www.facebook.com/Roskildesupklub/">Facebook</a></p>
     </div>
 
 </div>
