--- a/kontakt.html
+++ b/kontakt.html
@@ -36,5 +36,15 @@
     </label>
 </div>
 <script src="app/app.js">  </script>
+
+<div class="footer">
+    <div class="footer-element1">
+        <h4>Roskilde SUP Klub</h4>
+        <p>Facebook</p>
+        <p>Facebook</p>
+    </div>
+    <div class="footer-element2">
+        <h4>Sociale Medier</h4>
+        <p><a href="https://www.facebook.com/Roskildesupklub/">Facebook</a></p>
 </body>
 </html>
