--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Roskilde SUP Klub</title>
+    <title>Roskilde SUP Klub login</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
