--- a/kontakt.html
+++ b/kontakt.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Kontakt</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
