--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <a class="nav-item" href="omos.html">Om Os</a>
     </li>
     <li class="navbar-li">
-        <a class="nav-item" href="arrangementer.html">Arrangementer</a>
+        <a class="nav-item" href="user/arrangementer.html">Arrangementer</a>
     </li>
     <li class="navbar-li">
         <a class="nav-item" href="login.html">Login</a>
