--- a/user/arrangementer.html
+++ b/user/arrangementer.html
@@ -3,27 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Arrangementer</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-<a href="index.html">
-    <img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img" class="logoBillede">
+<a href="../index.html">
+    <img src="../img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img" class="logoBillede">
 </a>
 <ul class="navbar">
     <li class="navbar-li">
-        <a class="nav-item" href="index.html">Hjem</a>
+        <a class="nav-item" href="../index.html">Hjem</a>
     </li>
     <li class="navbar-li">
-        <a class="nav-item" href="omos.html">Om Os</a>
+        <a class="nav-item" href="../omos.html">Om Os</a>
     </li>
     <li class="navbar-li">
         <a class="nav-item" href="arrangementer.html">Arrangementer</a>
     </li>
     <li class="navbar-li">
-        <a class="nav-item" href="login.html">Login</a>
+        <a class="nav-item" href="../login.html">Login</a>
     </li>
     <li class="navbar-li">
-        <a class="nav-item" href="kontakt.html">Kontakt Os</a>
+        <a class="nav-item" href="../kontakt.html">Kontakt Os</a>
     </li>
 </ul>
 <div class="center-text">
@@ -34,7 +34,7 @@
         <textarea>Fancy test titel 1</textarea>
     </label>
 </div>
-<script src="app/app.js">  </script>
+<script src="../app/app.js">  </script>
 
 <div class="footer">
     <div class="footer-element1">
