--- a/login.html
+++ b/login.html
@@ -27,20 +27,20 @@
     </li>
 </ul>
 <div class="center-text">
-    <h1>Registrer og log in</h1>
+    <h1>Registrer og login</h1>
     <h2>Test titel 1</h2>
     <p class =p">
     <h3>Login form</h3>
     <form id="login-form">
-        <input id="user" type="username" placeholder="Enter username here" value=""/>
-        <input id="password" type="password" placeholder="Enter password here" value=""/>
+        <input id="user" type="username" placeholder="Indtast brugernavn her" value=""/>
+        <input id="password" type="password" placeholder="Indtast password her" value=""/>
         <input id="logon" type="submit" value="login" onClick="checkLogin()"/>
     </form>
 
     <h3>Register</h3>
     <form id="register">
-        <input id="user" type="username" placeholder="Enter username here" value=""/>
-        <input id="password" type="password" placeholder="Enter password here" value=""/>
+        <input id="user" type="username" placeholder="Indtast brugernavn her" value=""/>
+        <input id="password" type="password" placeholder="Indtast password her" value=""/>
         <input id="register" type="submit" value="register" onClick="storeLogin()"/>
     </form>
     </br>
