--- a/kontakt.html
+++ b/kontakt.html
@@ -16,9 +16,7 @@
     <li class="navbar-li">
         <a class="nav-item" href="omos.html">Om Os</a>
     </li>
-    <li class="navbar-li">
-        <a class="nav-item" href="user/arrangementer.html">Arrangementer</a>
-    </li>
+
     <li class="navbar-li">
         <a class="nav-item" href="login.html">Login</a>
     </li>
@@ -29,8 +27,8 @@
 <div class="center-text">
     <h1>Kontakt</h1>
     <h2>Test titel 1</h2>
-    <p class =p"> TekstTekstTekstTekstTekstTeks tTekstTekstTekstTekstTekstTekstTe kstTekstTekstTekstTe kstTekstTekstTekst TekstTekstTekstTekstTekstTeks tTek stTekstTekstTekstTekstTekstTekstTekstTekst TekstTekstTekstTekstTekstTekst
-         <textarea>Fancy test titel 1</textarea>
+
+         <textarea>Hvad handler henvendelsen om?</textarea>
     </label>
 </div>
 <script src="app/app.js">  </script>
