--- a/login.html
+++ b/login.html
@@ -17,9 +17,6 @@
         <a class="nav-item" href="omos.html">Om Os</a>
     </li>
     <li class="navbar-li">
-        <a class="nav-item" href="user/arrangementer.html">Arrangementer</a>
-    </li>
-    <li class="navbar-li">
         <a class="nav-item" href="login.html">Login</a>
     </li>
     <li class="navbar-li">
@@ -27,27 +24,14 @@
     </li>
 </ul>
 <div class="center-text">
-    <h1>Registrer og log in</h1>
+    <h1>Log in</h1>
     <h2>Test titel 1</h2>
-    <p class =p">
-    <h3>Login form</h3>
-    <form id="login-form">
+    <h3 style="margin-bottom: 2%; text-align: center;">Login form</h3>
+    <form id="login-form" style="margin: auto; text-align: center;">
         <input id="user" type="username" placeholder="Enter username here" value=""/>
         <input id="password" type="password" placeholder="Enter password here" value=""/>
         <input id="logon" type="submit" value="login" onClick="checkLogin()"/>
     </form>
-
-    <h3>Register</h3>
-    <form id="register">
-        <input id="user" type="username" placeholder="Enter username here" value=""/>
-        <input id="password" type="password" placeholder="Enter password here" value=""/>
-        <input id="register" type="submit" value="register" onClick="storeLogin()"/>
-    </form>
-    </br>
-    </br>
-
-        <textarea>Fancy test titel 1</textarea>
-        </label>
 </div>
 <script src="app/app.js">  </script>
 
