--- a/login.html
+++ b/login.html
@@ -24,8 +24,10 @@
     </li>
 </ul>
 <div class="center-text">
-    <h1>Log in</h1>
-    <h2>Test titel 1</h2>
+    <h1>Login</h1>
+    <p style="margin-bottom: 2%; text-align: center;">Hvis du allerede er en oprettet bruger, så kan du logge ind på siden her:</p>
+    <br>
+    <br>
     <h3 style="margin-bottom: 2%; text-align: center;">Login form</h3>
     <form id="login-form" style="margin: auto; text-align: center;">
         <input id="user" type="username" placeholder="Enter username here" value=""/>
