--- a/user/arrangementer.html
+++ b/user/arrangementer.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Arrangementer</title>
-    <link rel="stylesheet" href="../css/styles.css">
+    <link rel="stylesheet" href="../css/user-styles.css">
 </head>
 <body>
 <a href="../index.html">
@@ -11,16 +11,19 @@
 </a>
 <ul class="navbar">
     <li class="navbar-li">
-        <a class="nav-item" href="../index.html">Hjem</a>
+        <a class="nav-item" href="/user/arrangementer.html">Arrangementer</a>
     </li>
     <li class="navbar-li">
-        <a class="nav-item" href="../omos.html">Om Os</a>
+        <a class="nav-item" href="/user/book-board.html">Book Board</a>
     </li>
     <li class="navbar-li">
-        <a class="nav-item" href="../login.html">Login</a>
+        <a class="nav-item" href="/user/reglement.html">Reglement</a>
     </li>
     <li class="navbar-li">
-        <a class="nav-item" href="../kontakt.html">Kontakt Os</a>
+        <a class="nav-item" href="/user/Profil">Profil</a>
+    </li>
+    <li class="navbar-li">
+        <a class="nav-item"
     </li>
 </ul>
 <div class="center-text">
