--- a/user/arrangementer.html
+++ b/user/arrangementer.html
@@ -6,24 +6,21 @@
     <link rel="stylesheet" href="../css/user-styles.css">
 </head>
 <body>
-<a href="../index.html">
-    <img src="../img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img" class="logoBillede">
-</a>
 <ul class="navbar">
     <li class="navbar-li">
-        <a class="nav-item" href="/user/arrangementer.html">Arrangementer</a>
+        <a class="nav-item" href="../user/arrangementer.html">Arrangementer</a>
     </li>
     <li class="navbar-li">
-        <a class="nav-item" href="/user/book-board.html">Book Board</a>
+        <a class="nav-item" href="../user/book-board.html">Book Board</a>
     </li>
     <li class="navbar-li">
-        <a class="nav-item" href="/user/reglement.html">Reglement</a>
+        <a class="nav-item" href="../user/reglement.html">Reglement</a>
     </li>
     <li class="navbar-li">
-        <a class="nav-item" href="/user/Profil">Profil</a>
+        <a class="nav-item" href="../user/profil.html">Profil</a>
     </li>
     <li class="navbar-li">
-        <a class="nav-item"
+        <a class="nav-item" type="submit">Logout</a>
     </li>
 </ul>
 <div class="center-text">
