--- a/user/reglement.html
+++ b/user/reglement.html
@@ -3,8 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <title>Reglement</title>
+    <link rel="stylesheet" href="../css/user-styles.css">
 </head>
 <body>
-
+<ul class="navbar">
+    <li class="navbar-li">
+        <a class="nav-item" href="../user/arrangementer.html">Arrangementer</a>
+    </li>
+    <li class="navbar-li">
+        <a class="nav-item" href="../user/book-board.html">Book Board</a>
+    </li>
+    <li class="navbar-li">
+        <a class="nav-item" href="../user/reglement.html">Reglement</a>
+    </li>
+    <li class="navbar-li">
+        <a class="nav-item" href="../user/profil.html">Profil</a>
+    </li>
+    <li class="navbar-li">
+        <a class="nav-item" type="submit">Logout</a>
+    </li>
+</ul>
 </body>
 </html>
