--- a/user/arrangementer.html
+++ b/user/arrangementer.html
@@ -20,7 +20,7 @@
         <a class="nav-item" href="../user/profil.html">Profil</a>
     </li>
     <li class="navbar-li">
-        <a class="nav-item" type="submit">Logout</a>
+        <a class="nav-item" href="logout.html">Logout</a>
     </li>
 </ul>
 <div class="center-text">
