--- a/user/logout.html
+++ b/user/logout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Profil</title>
+    <title>Logout</title>
     <link rel="stylesheet" href="../css/user-styles.css">
 </head>
 <body>
@@ -23,6 +23,5 @@
         <a class="nav-item" href="logout.html">Logout</a>
     </li>
 </ul>
-
 </body>
 </html>
