--- a/user/book-board.html
+++ b/user/book-board.html
@@ -23,5 +23,9 @@
         <a class="nav-item" href="logout.html">Logout</a>
     </li>
 </ul>
+<div class="center-text">
+    <h1>Book Board</h1>
+    <p class="p">TekstTekstTekstTekstTekstTekstTekstTekst</p>
+</div>
 </body>
 </html>
