--- a/user/logout.html
+++ b/user/logout.html
@@ -23,5 +23,8 @@
         <a class="nav-item" href="logout.html">Logout</a>
     </li>
 </ul>
+<div class="center-text">
+    <h1>Logout</h1>
+</div>
 </body>
 </html>
