--- a/user/profil.html
+++ b/user/profil.html
@@ -23,6 +23,8 @@
         <a class="nav-item" href="logout.html">Logout</a>
     </li>
 </ul>
-
+<div class="center-text">
+    <h1>Profil</h1>
+</div>
 </body>
 </html>
