--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
 <div class="footer">
     <div class="footer-element1">
         <h4>Roskilde SUP Klub</h4>
-        <p>Facebook</p>
-        <p>Facebook</p>
+        <p>Strandvejen 18, 4000 Veddelev, Roskilde, Danmark</p>
     </div>
     <div class="footer-element2">
         <h4>Sociale Medier</h4>
