--- a/omos.html
+++ b/omos.html
@@ -41,12 +41,12 @@
 <div class="footer">
     <div class="footer-element1">
         <h4>Roskilde SUP Klub</h4>
-        <p>Facebook</p>
-        <p>Facebook</p>
+        <p>Strandvejen 18, 4000 Veddelev, Roskilde, Danmark</p>
     </div>
     <div class="footer-element2">
         <h4>Sociale Medier</h4>
         <p><a href="https://www.facebook.com/Roskildesupklub/">Facebook</a></p>
+    </div>
 <script src="app/app.js">  </script>
 </body>
 </html>
