--- a/kontakt.html
+++ b/kontakt.html
@@ -37,6 +37,8 @@
         <input id="phone" type="phone" placeholder="Enter your phone number here" value=""/>
         <h4>Subject:</h4>
         <input id="subject" type="subject" placeholder="Enter your subject here" value=""/>
+        <h4>Message</h4>
+        <input id="message" type="message" placeholder="Enter your message here" value=""/>
         </br>
         </br>
         <input id="contact" type="submit" value="Contact us" onClick="checkLogin()"/>
