--- a/login.html
+++ b/login.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>Kontakt</title>
+    <title>login</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
