--- a/user/arrangementer.html
+++ b/user/arrangementer.html
@@ -20,6 +20,9 @@
         <a class="nav-item" href="../user/profil.html">Profil</a>
     </li>
     <li class="navbar-li">
+        <a class="nav-item" href="opret-bruger.html">Opret Bruger</a>
+    </li>
+    <li class="navbar-li">
         <a class="nav-item" href="logout.html">Logout</a>
     </li>
 </ul>
