--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>login</title>
     <link rel="stylesheet" href="css/styles.css">
+    <script src="app/Login.js">  </script>
 </head>
 <body>
 <a href="index.html">
@@ -32,7 +33,7 @@
     <form id="login-form" style="margin: auto; text-align: center;">
         <input id="user" type="username" placeholder="Enter username here" value=""/>
         <input id="password" type="password" placeholder="Enter password here" value=""/>
-        <input id="logon" type="submit" value="login" onClick="checkLogin()"/>
+        <input id="logon" type="submit" value="login" onClick="loginUser()"/>
     </form>
 </div>
 <script src="app/app.js">  </script>
