I QUIT HOLY FUCK WTF WHY DOES THIS NOT WORK

--- a/user/login.html
+++ b/user/login.html
@@ -39,7 +39,7 @@
     <h2 style="text-align: center;">Opret Bruger</h2>
     <form class id="register-form" style="margin: auto; text-align: center;">
         <p><b>Username</b></p>
-        <input id="userRegister" type="username" placeholder="Enter username here" value="" onChange="userUpdate()"/>
+        <input id="userRegister" type="username" placeholder="Enter username here" value=""/>
         <p><b>Password</b></p>: <a class="demo-text"></a>
         <input id="passwordRegister" type="password" placeholder="Enter password here" value=""/>
         <p><b>Admin?</b></p>
