--- a/kontakt.html
+++ b/kontakt.html
@@ -6,9 +6,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<a href="index.html">
-    <img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img" class="logoBillede">
-</a>
+
 <ul class="navbar">
     <li class="navbar-li">
         <a class="nav-item" href="index.html">Hjem</a>
@@ -24,27 +22,16 @@
         <a class="nav-item" href="kontakt.html">Kontakt Os</a>
     </li>
 </ul>
+
+<a href="index.html">
+    <img src="img/logo%20cmyk%20roskilde%20sup%20klub.png" alt="banner-img" class="logoBillede">
+</a>
+</a>
 <div class="center-text">
     <h1>Her kan du kontakte os</h1>
 
-
-    <h3 style="margin-bottom: 2%; text-align: center;">Contact form</h3>
-    <form id="login-form" style="margin: auto; text-align: center;">
-
-        <h4>Name:</h4>
-        <input id="name" type="name" placeholder="Enter your name" value=""/>
-        <h4>Phone:</h4>
-        <input id="phone" type="phone" placeholder="Enter your phone number here" value=""/>
-        <h4>Subject:</h4>
-        <input id="subject" type="subject" placeholder="Enter your subject here" value=""/>
-        <h4>Message</h4>
-        <input id="message" type="message" placeholder="Enter your message here" value=""/>
-        </br>
-        </br>
-        <input id="contact" type="submit" value="Contact us" onClick="checkLogin()"/>
-        </br>
-        </br>
-    </form>
+    <h3>Trykk på linken under for å sende os en mail</h3>
+    <A HREF="mailto:RoskildeSupklub@gmail.com">RoskildeSupklub@gmail.com</A>
 
 
     </label>
