Sponsor, headder, footer og andet

--- a/kontakt.html
+++ b/kontakt.html
@@ -37,15 +37,25 @@
     </label>
 </div>
 <script src="app/app.js">  </script>
+<div class="row">
+
+    <div class="column">
+        <img src="img/SponsorsWanted.jpg">
+        <img src="img/SponsorsWanted.jpg">
+    </div>
 
 <div class="footer">
-    <div class="footer-element1">
+    <div class="footer-element">
         <h4>Roskilde SUP Klub</h4>
         <p>Strandvejen 18, 4000 Veddelev, Roskilde, Danmark</p>
     </div>
-    <div class="footer-element2">
+    <div class="footer-element">
         <h4>Sociale Medier</h4>
         <p><a href="https://www.facebook.com/Roskildesupklub/">Facebook</a></p>
+    </div>
+    <div class="footer-element">
+        <h4>Dansk surf og rafting forbund</h4>
+        <p><a href="https://www.dsrf.dk/">DSFR</a></p>
     </div>
 </body>
 </html>
