--- a/omos.html
+++ b/omos.html
@@ -41,14 +41,26 @@
     <p>Pellentesque habitant morbi tristique senectus et netus et commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan porttitor, facilisis luctus, metus </p>
 </div>
 <script src="app/app.js">  </script>
+
+<div class="row">
+
+    <div class="column">
+        <img src="img/SponsorsWanted.jpg">
+        <img src="img/SponsorsWanted.jpg">
+    </div>
+
 <div class="footer">
-    <div class="footer-element1">
+    <div class="footer-element">
         <h4>Roskilde SUP Klub</h4>
         <p>Strandvejen 18, 4000 Veddelev, Roskilde, Danmark</p>
     </div>
-    <div class="footer-element2">
+    <div class="footer-element">
         <h4>Sociale Medier</h4>
         <p><a href="https://www.facebook.com/Roskildesupklub/">Facebook</a></p>
+    </div>
+    <div class="footer-element">
+        <h4>Dansk surf og rafting forbund</h4>
+        <p><a href="https://www.dsrf.dk/">DSFR</a></p>
     </div>
 <script src="app/app.js">  </script>
 </body>
