--- a/kontakt.html
+++ b/kontakt.html
@@ -30,9 +30,15 @@
 <div class="center-text">
     <h1>Her kan du kontakte os</h1>
 
-    <h3>Trykk på linken under for å sende os en mail</h3>
-    <A HREF="mailto:RoskildeSupklub@gmail.com">RoskildeSupklub@gmail.com</A>
 
+    <h3>Trykk på linken under for å sende os en mail</h3>
+
+    <br>
+
+
+    <div class="mail">
+    <A HREF="mailto:RoskildeSupklub@gmail.com">RoskildeSupklub@gmail.com</A>
+    </div>
 
     </label>
 </div>
