Nu kan man ikke komme ind på bruger-siderne uden noget i session storage. Har også gjort så brugere nu kan skifte password og email i deres profil side. Har endvidere tilføjet nogle fejl beskeder til brugeren ved login

--- a/user/login.html
+++ b/user/login.html
@@ -32,22 +32,20 @@
     <h1>Login</h1>
     <p style="margin-bottom: 2%; text-align: center;">Hvis du allerede er en oprettet bruger, så kan du logge ind på siden her:</p>
     <br>
-    <br>
-    <h3 style="margin-bottom: 2%; text-align: center;">Login form</h3>
     <form id="login-form" style="margin: auto; text-align: center;">
+        <p><b>Brugernavn</b></p>
         <input id="userLogin" type="username" placeholder="Enter username here" required>
-        <input id="passwordLogin" type="password" placeholder="Enter password here" required>
-        // Lav til submit i stedet for button og skift onClick til onSubmit
-        <input id="logon" type="button" value="login" onClick="loginUser()"/>
-        <input id="logonLogin" type="button" value="test" onClick="loginUser()"/>
-
+        <p><b>Password</b></p>
+        <input id="passwordLogin" type="password" placeholder="Enter password here" required> <br><a id="passText" style="color:red;"></a>
+        <br>
+        <input class="login-button" id="logon" type="button" value="login" onClick="loginUser()"/>
     </form>
     <br>
     <h2 style="text-align: center;">Opret Bruger</h2>
     <form class id="register-form" style="margin: auto; text-align: center;">
-        <p><b>Username</b></p>
+        <p><b>Brugernavn</b></p>
         <input id="userRegister" type="username" placeholder="Enter username here" value="" required>
-        <p><b>Password</b></p>: <a class="demo-text"></a>
+        <p><b>Password</b></p>
         <input id="passwordRegister" type="password" placeholder="Enter password here" value="" required>
         <p><b>Admin?</b></p>
         <select id ="adminRegister" name="admin">
@@ -55,7 +53,7 @@
             <option value="true">Ja</option>
         </select>
         <br><br>
-        <input id="register" type="submit" value="register" onClick="checkUser()"/>
+        <input class="login-button" id="register" type="button" value="register" onClick="checkUser()"/>
     </form>
 </div>
 
