--- a/user/opret-bruger.html
+++ b/user/opret-bruger.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <title>Opret Bruger</title>
     <link rel="stylesheet" href="../css/user-styles.css">
-    <script src="../app/Opret-bruger.js"  type="text/javascript"></script>
-    <script src="../app/my-sql-register.js"  type="text/javascript"></script>
+    <script src="../app/Login.js"></script>
+
 </head>
 <body>
 <ul class="navbar">
@@ -25,7 +25,7 @@
         <a class="nav-item" href="opret-bruger.html">Opret Bruger</a>
     </li>
     <li class="navbar-li">
-        <a class="nav-item" href="logout.html">Logout</a>
+        <a class="nav-item" href="logout.html">Log Ud</a>
     </li>
 </ul>
 
