--- a/user/arrangementer.html
+++ b/user/arrangementer.html
@@ -9,9 +9,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css"
           integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/user-styles.css">
+    <script src="../app/Login.js"></script>
 
 </head>
-<body>
+<body onload="loggedInCheck()">
 
 <ul class="navbar">
     <li class="navbar-li">
@@ -26,11 +27,9 @@
     <li class="navbar-li">
         <a class="nav-item" href="../user/profil.html">Profil</a>
     </li>
+
     <li class="navbar-li">
-        <a class="nav-item" href="opret-bruger.html">Opret Bruger</a>
-    </li>
-    <li class="navbar-li">
-        <a class="nav-item" href="logout.html">Logout</a>
+        <a class="nav-item" href="logout.html">Log Ud</a>
     </li>
 </ul>
 <div class="center-text">
