--- a/user/logout.html
+++ b/user/logout.html
@@ -4,8 +4,10 @@
     <meta charset="UTF-8">
     <title>Logout</title>
     <link rel="stylesheet" href="../css/user-styles.css">
+    <script src="../app/Login.js"></script>
+
 </head>
-<body>
+<body onload="loggedInCheck()">
 <ul class="navbar">
     <li class="navbar-li">
         <a class="nav-item" href="../user/arrangementer.html">Arrangementer</a>
@@ -19,15 +21,14 @@
     <li class="navbar-li">
         <a class="nav-item" href="../user/profil.html">Profil</a>
     </li>
+
     <li class="navbar-li">
-        <a class="nav-item" href="opret-bruger.html">Opret Bruger</a>
-    </li>
-    <li class="navbar-li">
-        <a class="nav-item" href="logout.html">Logout</a>
+        <a class="nav-item" href="logout.html">Log Ud</a>
     </li>
 </ul>
 <div class="center-text">
-    <h1>Logout</h1>
+    <h1>Log Ud</h1>
+    <button onClick="logOut()">Log ud</button>
 </div>
 </body>
 </html>
