Tilføjet fejl meddelelser til registrering

--- a/user/login.html
+++ b/user/login.html
@@ -44,7 +44,7 @@
     <h2 style="text-align: center;">Opret Bruger</h2>
     <form class id="register-form" style="margin: auto; text-align: center;">
         <p><b>Brugernavn</b></p>
-        <input id="userRegister" type="username" placeholder="Enter username here" value="" required>
+        <input id="userRegister" type="username" placeholder="Enter username here" value="" required> <br><a id="passRegText" style="color:red;"></a>
         <p><b>Password</b></p>
         <input id="passwordRegister" type="password" placeholder="Enter password here" value="" required>
         <p><b>Admin?</b></p>
