Tilføjet admin side med tabel over brugere. Der laves et admin tjek på denne underside, for at se om brugeren i session storage er admin

--- a/user/reglement.html
+++ b/user/reglement.html
@@ -22,6 +22,9 @@
         <a class="nav-item" href="../user/profil.html">Profil</a>
     </li>
     <li class="navbar-li">
+        <a class="nav-item" href="../user/admin.html">Admin</a>
+    </li>
+    <li class="navbar-li">
         <a class="nav-item" href="logout.html">Log Ud</a>
     </li>
 </ul>
