--- a/user/admin.html
+++ b/user/admin.html
@@ -2,13 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Profil</title>
+    <title>Admin</title>
     <link rel="stylesheet" href="../css/user-styles.css">
     <script src="../app/Login.js"></script>
-    <script src="../app/Profil.js"></script>
-
+    <script src="../app/admin.js"></script>
 </head>
-<body onload="loggedInCheck()">
+<body onload="adminCheck()">
 <ul class="navbar">
     <li class="navbar-li">
         <a class="nav-item" href="../user/arrangementer.html">Arrangementer</a>
@@ -25,15 +24,14 @@
     <li class="navbar-li">
         <a class="nav-item" href="../user/admin.html">Admin</a>
     </li>
-
     <li class="navbar-li">
         <a class="nav-item" href="logout.html">Log Ud</a>
     </li>
 </ul>
 <div class="center-text">
-    <h1>Profil</h1>
-    <a>Skift password: </a><input id="newPassword" value=""> <button onClick="changePassword()">Skift Password</button> <br>
-    <a>Skift email: </a><input id="newEmail" value=""> <button onClick="changeEmail()">Skift Email</button>
+    <div class="userTable" id="userTable">
+
+    </div>
 </div>
 </body>
 </html>
