--- a/user/arrangementer.html
+++ b/user/arrangementer.html
@@ -27,7 +27,9 @@
     <li class="navbar-li">
         <a class="nav-item" href="../user/profil.html">Profil</a>
     </li>
-
+    <li class="navbar-li">
+        <a class="nav-item" href="../user/admin.html">Admin</a>
+    </li>
     <li class="navbar-li">
         <a class="nav-item" href="logout.html">Log Ud</a>
     </li>
